--- a/Frontend/src/app/components/card-item/card-item.component.html
+++ b/Frontend/src/app/components/card-item/card-item.component.html
@@ -1,4 +1,4 @@
-<div class="card" [routerLink]="['/'+music_type+'/'+id]">
+<div class="card music-card" [routerLink]="['/'+music_type+'/'+id]">
     <h4>{{name}}</h4>
     <p>{{content}}</p>
 </div>
