--- a/Frontend/src/app/components/search-bar/search-bar.component.html
+++ b/Frontend/src/app/components/search-bar/search-bar.component.html
@@ -1,6 +1,6 @@
 <h3>Szukaj:</h3>
 
-<select [(ngModel)]="musicType" class="form-control">
+<select id="musicType" [(ngModel)]="musicType" class="form-control">
     <option value="song">Piosenka</option>
     <option value="album">Album</option>
     <option value="artist">Artysta</option>
