--- a/Frontend/src/app/components/song-item/song-item.component.html
+++ b/Frontend/src/app/components/song-item/song-item.component.html
@@ -1,4 +1,4 @@
-<div class="card" [routerLink]="['/song/'+songId]">
+<div class="card song-item-card" [routerLink]="['/song/'+songId]">
     <img [src]="image_url" class="card-img-top">
     <h3>{{songName! | shortenText:30}}</h3>
     <p>@for (artist of artists; track artist) {
