--- a/Frontend/src/app/components/login/login.component.html
+++ b/Frontend/src/app/components/login/login.component.html
@@ -1,19 +1,26 @@
 <div class="container">
-    <form action="post" autocomplete="off" method="POST">
-      <legend>Zaloguj się:</legend>
+    <form [formGroup]="loginForm" (ngSubmit)="signIn()" action="post" autocomplete="off" method="POST">
+      <legend>Logowanie</legend>
       <div class="input-group">
-        <input [(ngModel)]="credentials.login" type="text" class="form-control"
+        <input formControlName="login" type="text" class="form-control"
                name="username" placeholder="Email" title="Login">
       </div>
    
       <div class="input-group">
-        <input [(ngModel)]="credentials.password" type="password" class="form-control"
+        <input formControlName="password" type="password" class="form-control"
                name="password" placeholder="Hasło" title="Password">
       </div>
    
-      <div>
-        <button (click)="signIn()" class="btn btn-primary" type="submit" title="Przycisk zaloguj">Zaloguj</button>
-      </div> 
+      <div class="form-group">
+        <div class="col-xs-offset-3 col-xs-10">
+          <button [disabled]="!loginForm.valid" class="btn btn-primary" type="submit" title="Przycisk zaloguj">Zaloguj</button>
+        </div>
+      </div>
+    
+      
+      @if (hasTried) {
+        <p class="text-danger">Niepoprawny login lub hasło.</p>
+      }
     </form>
 </div>
    
